--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Static Box</title>
+    <title>JerkMate</title>
     
     <!-- Open Graph meta tags for Discord Embed -->
     <meta property="og:title" content="Jerkmate Live Feed">
